# unitree_rl_lab

./: .gitignore  CLAUDE.md  unitree_rl_lab.sh  zero_agent.py
deploy/robots/g1_29dof/: CMakeLists.txt  main.cpp  test_deadband.cpp  test_valve_deploy.cpp
deploy/robots/g1_29dof/config/: config.yaml
deploy/robots/g1_29dof/config/policy/valve_turn/v7/params/: deploy.yaml
deploy/robots/g1_29dof/config/policy/velocity/v0/exported/: policy.onnx
deploy/robots/g1_29dof/config/policy/velocity/v0/params/: deploy.yaml
deploy/robots/g1_29dof/include/: State_ValveTurn.h
deploy/robots/g1_29dof/src/: State_RLBase.cpp  State_ValveTurn.cpp
logs/rsl_rl/valve_turn_g1_29dof/saved_models/: model_2550.pt  turn_v5_model_1100.pt  turn_v6_ft_model_2500.pt  turn_v6_model_1999.pt
logs/rsl_rl/valve_turn_g1_29dof/saved_models/exported/: policy.onnx  turn_v6_policy.pt
scripts/: dump_valve_deploy.py  list_envs.py
scripts/rsl_rl/: c3_isaac_reference.py  collect_reach_dataset.py  eval_all_models.sh  play.py  probe_bimanual.py  probe_reset_direction.py  train.py
source/unitree_rl_lab/tests/: conftest.py
source/unitree_rl_lab/tests/manipulation/: conftest.py  test_09_task_registration.py  test_10_turn_presets.py
source/unitree_rl_lab/tests/manipulation/results/: module_09_report.json  module_09_report.txt  module_10_report.json  module_10_report.txt
source/unitree_rl_lab/unitree_rl_lab/assets/original_files/: 950-AL-250-B7_8-A.step
source/unitree_rl_lab/unitree_rl_lab/datasets/: reach_arm_positions.npy
source/unitree_rl_lab/unitree_rl_lab/utils/: export_deploy_cfg.py
(+43 files in other folders)
